Realign the password reset button (https://github.com/FrontEnd-ro/frontend.ro/issues/497)

--- a/client/components/login/LoginButtons/LoginButtons.module.scss
+++ b/client/components/login/LoginButtons/LoginButtons.module.scss
@@ -14,7 +14,7 @@
 }
 
 .register-mode {
-  button:first-of-type {
+  button:first-of-type:not(.forgot-password) {
     transform: translateY(5em);
   }
 
